# 2019_GROUP_33

./: .gitignore  .travis.yml  CMakeLists.txt  Cell.cpp  Cell.hpp  Chang.txt  Chayanis.txt  Commands_for_fetching_data.txt  Doxyfile  Doxyfile_local  Junaid.txt  LICENSE  LICENSE.txt  Materail.cpp  Materail.h  Material.cpp  MatrixTestCode.cpp  Model.cpp  Model.h  NEWS.md  README.md  TEAM.md  To Do.md  generateDocumentationAndDeploy.sh  license.txt  main.cpp  testfile.txt
Class_Model/: Model.h  READ_ME.txt
Class_Model/Class_Cell/: CellTestCode.cpp  READ_ME.txt
Class_Model/Class_Cell/Class_Material/: Materail.cpp  Materail.h  Material.h  MaterialTestCode.cpp  READ_ME.txt  main.cpp
Class_Model/Class_Cell/Class_Vectors/: READ_ME.txt  Vectors.cpp  Vectors.h  VectorsTestCode.cpp  main.cpp
Include/: Cell.hpp  Material.h  Matrix.hpp  Model.h  Model.hpp  Vectors.h
Model_Files/: ExampleModel1.mod  Model_Three.txt  Save_File_Of_Model_One.txt  Save_File_Of_Model_Two_Rotated.txt  Save_File_Of_Model_Two_UnRotated.txt  aModelOfThreeHexahedrons.txt
Semester_1/: CMakeLists.txt
Semester_1(other version)/: main.cpp
Semester_1/all_test_code/: CellTestCode.cpp  ModelTestCode.cpp
Semester_1/inc/: Cell.hpp  Material.h  Matrix.hpp  Model.hpp
Semester_1/src/: Cell.cpp  Model.cpp
Semester_2/: CMakeLists.txt
Semester_2/inc/: edit_light.h  filters.h  mainwindow.h  vtklight_withname.h
Semester_2/src/: edit_light.cpp  edit_light.ui  filters.cpp  filters.ui  main.cpp  mainwindow.cpp  mainwindow.ui  vtklight_withname.cpp
Test/: CellTestCode.cpp  MaterialTestCode.cpp  MatrixTestCode.cpp  ModelTestCode.cpp  SaveFileOfaModelOfThreeHexahedrons.txt  SaveFileOfanotherModelRotated.txt  SaveFileOfanotherModelUnRotated.txt  VectorsTestCode.cpp  anotherModel.txt
all_test_code/: MatrixTestCode.cpp  ModelTestCode.cpp  VectorsTestCode.cpp
example_models/: Hexahedron.txt  Model_One - Copy.txt  Model_One.txt  Model_Two.txt  New Text Document.txt  New stl file.stl  Pyramid.txt  Tetra to triangle test.txt  Tetrahedron.txt  X_Example.txt  Y_Example.txt  Z_Example.txt
html/: _cell_8hpp.html  _cell_8hpp_source.html  _material_8h.html  _material_8h_source.html  _matrix_8hpp.html  _matrix_8hpp_source.html  _model_8hpp.html  _model_8hpp_source.html  _testing___file___functions_8h.html  _testing___file___functions_8h.js  _testing___file___functions_8h_source.html  _vectors_8h.html  _vectors_8h_source.html  annotated.html  annotated.js  class_cell-members.html  class_cell.html  class_cell.js  class_edit___light-members.html  class_edit___light.html  class_edit___light.js  class_filters-members.html  class_filters.html  class_filters.js  class_hexahedron-members.html  class_hexahedron.html  class_hexahedron.js  class_main_window-members.html  class_main_window.html  class_main_window.js  class_material-members.html  class_material.html  class_material.js  class_matrix3x3-members.html  class_matrix3x3.html  class_matrix3x3.js  class_model-members.html  class_model.html  class_model.js  class_pyramid-members.html  (+84 more)
html/search/: all_1.js  all_10.js  all_11.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  files_0.js  files_1.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+24 more)
inc/: Model.hpp  Vectors.h
installers/: Introduction.txt  Licence.txt  License.txt  Model Viewer.pkg  Model Viewer.pkgproj  README.txt
installers/Observer-1.2.1-macos.mpkg/Contents/: distribution.dist
installers/Observer-1.2.1-macos.mpkg/Contents/Resources/English.lproj/: license.txt
installers/Observer.mpkg/Contents/: distribution.dist
installers/Observer.mpkg/Contents/Resources/English.lproj/: Localizable.strings  readme.txt
model/: CMakeLists.txt  README.md  RunAllTestCode.bat  travis_qmake_gcc_cpp11_gcov.pro
model/include/: Cell.hpp  Material.h  Matrix.hpp  Model.hpp  Testing_File_Functions.h  Vectors.h  double_equality_function.h
model/source/: Cell.cpp  Material.cpp  Matrix.cpp  Model.cpp  Testing_File_Functions.cpp  Vectors.cpp  double_equality_function.cpp
model/test_code/: CellTestCode.cpp  Cell_TestCode.cpp  MaterialTestCode.cpp  MatrixTestCode.cpp  Matrix_TestCode.cpp  ModelTestCode.cpp  README.md  VectorsTestCode.cpp
model_viewer/: CMakeLists.txt  README.MD
model_viewer/images/: Icon.rc  Images.qrc  Observer.stl  ObserverLogo.stl
model_viewer/include/: edit_light.h  filters.h  mainwindow.h  vtklight_withname.h
model_viewer/source/: edit_light.cpp  edit_light.ui  filters.cpp  filters.ui  filters.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.ui  vtklight_withname.cpp
person/Semester_1(other version)/: Model.cpp
person/Semester_1/all_test_code/: MaterialTestCode.cpp
person/Semester_1/src/: Material.cpp
person/qt/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/: Cell.cpp  Material.cpp  Matrix.cpp  Model.cpp  Vectors.cpp
